--- a/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -320,27 +320,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appended to file \"numerical_ADM_to_BSSN_Ccodes/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"\n",
-      "Appended to file \"numerical_ADM_to_BSSN_Ccodes/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"\n"
+      "Output C function ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs() to file numerical_ADM_to_BSSN_Ccodes/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\n"
      ]
     }
    ],
    "source": [
     "# Step 6: Output all ADM-to-BSSN expressions to a C function \n",
+    "ID_inputs_param = \"ID_inputs other_inputs,\"\n",
+    "if pointer_to_ID_inputs == True:\n",
+    "    ID_inputs_param = \"ID_inputs *other_inputs,\"\n",
     "\n",
-    "with open(os.path.join(Ccodesdir,\"ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"), \"w\") as file:\n",
-    "    file.write(\"void ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs(const REAL xx0xx1xx2[3],\")\n",
-    "    if pointer_to_ID_inputs == True:\n",
-    "        file.write(\"ID_inputs *other_inputs,\")\n",
-    "    else:\n",
-    "        file.write(\"ID_inputs other_inputs,\")\n",
-    "    file.write(\"\"\"\n",
+    "desc=\"Write BSSN variables in terms of ADM variables at a given point xx0,xx1,xx2\"\n",
+    "name=\"ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs\"\n",
+    "params = \"const REAL xx0xx1xx2[3],\"+ID_inputs_param+\"\"\"\n",
     "                    REAL *hDD00,REAL *hDD01,REAL *hDD02,REAL *hDD11,REAL *hDD12,REAL *hDD22,\n",
     "                    REAL *aDD00,REAL *aDD01,REAL *aDD02,REAL *aDD11,REAL *aDD12,REAL *aDD22,\n",
     "                    REAL *trK, \n",
     "                    REAL *vetU0,REAL *vetU1,REAL *vetU2,\n",
     "                    REAL *betU0,REAL *betU1,REAL *betU2,\n",
-    "                    REAL *alpha,  REAL *cf) {\n",
+    "                    REAL *alpha,  REAL *cf\"\"\"\n",
+    "outCparams = \"preindent=1,outCverbose=False,includebraces=False\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name, params=params,\n",
+    "    body     =\"\"\"\n",
     "      REAL gammaSphorCartDD00,gammaSphorCartDD01,gammaSphorCartDD02,\n",
     "           gammaSphorCartDD11,gammaSphorCartDD12,gammaSphorCartDD22;\n",
     "      REAL KSphorCartDD00,KSphorCartDD01,KSphorCartDD02,\n",
@@ -350,31 +352,25 @@
     "      const REAL xx0 = xx0xx1xx2[0];\n",
     "      const REAL xx1 = xx0xx1xx2[1];\n",
     "      const REAL xx2 = xx0xx1xx2[2];\n",
-    "      REAL xyz_or_rthph[3];\\n\"\"\")\n",
-    "outCparams = \"preindent=1,outCfileaccess=a,outCverbose=False,includebraces=False\"\n",
-    "outputC(r_th_ph_or_Cart_xyz_oID_xx[0:3],[\"xyz_or_rthph[0]\",\"xyz_or_rthph[1]\",\"xyz_or_rthph[2]\"],\n",
-    "        os.path.join(Ccodesdir,\"ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"),outCparams+\",CSE_enable=False\")\n",
-    "with open(os.path.join(Ccodesdir,\"ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"), \"a\") as file:\n",
-    "    file.write(\"      \"+ADM_input_function_name+\"\"\"(xyz_or_rthph, other_inputs,\n",
-    "                      &gammaSphorCartDD00,&gammaSphorCartDD01,&gammaSphorCartDD02,\n",
-    "                      &gammaSphorCartDD11,&gammaSphorCartDD12,&gammaSphorCartDD22,\n",
-    "                      &KSphorCartDD00,&KSphorCartDD01,&KSphorCartDD02,\n",
-    "                      &KSphorCartDD11,&KSphorCartDD12,&KSphorCartDD22,\n",
-    "                      &alphaSphorCart,&betaSphorCartU0,&betaSphorCartU1,&betaSphorCartU2,\n",
-    "                      &BSphorCartU0,&BSphorCartU1,&BSphorCartU2);\n",
-    "        // Next compute all rescaled BSSN curvilinear quantities:\\n\"\"\")\n",
-    "outCparams = \"preindent=1,outCfileaccess=a,outCverbose=False,includebraces=False\"\n",
-    "outputC([hDD[0][0],hDD[0][1],hDD[0][2],hDD[1][1],hDD[1][2],hDD[2][2],\n",
+    "      REAL xyz_or_rthph[3];\\n\"\"\"+\n",
+    "    outputC(r_th_ph_or_Cart_xyz_oID_xx[0:3],[\"xyz_or_rthph[0]\",\"xyz_or_rthph[1]\",\"xyz_or_rthph[2]\"],\"returnstring\",\n",
+    "            outCparams+\",CSE_enable=False\")+\"      \"+ADM_input_function_name+\"\"\"(xyz_or_rthph, other_inputs,\n",
+    "                       &gammaSphorCartDD00,&gammaSphorCartDD01,&gammaSphorCartDD02,\n",
+    "                       &gammaSphorCartDD11,&gammaSphorCartDD12,&gammaSphorCartDD22,\n",
+    "                       &KSphorCartDD00,&KSphorCartDD01,&KSphorCartDD02,\n",
+    "                       &KSphorCartDD11,&KSphorCartDD12,&KSphorCartDD22,\n",
+    "                       &alphaSphorCart,&betaSphorCartU0,&betaSphorCartU1,&betaSphorCartU2,\n",
+    "                       &BSphorCartU0,&BSphorCartU1,&BSphorCartU2);\n",
+    "      // Next compute all rescaled BSSN curvilinear quantities:\\n\"\"\"+\n",
+    "    outputC([hDD[0][0],hDD[0][1],hDD[0][2],hDD[1][1],hDD[1][2],hDD[2][2],\n",
     "         aDD[0][0],aDD[0][1],aDD[0][2],aDD[1][1],aDD[1][2],aDD[2][2],\n",
     "         trK,  vetU[0],vetU[1],vetU[2],  betU[0],betU[1],betU[2],\n",
     "         alpha, cf], \n",
     "        [\"*hDD00\",\"*hDD01\",\"*hDD02\",\"*hDD11\",\"*hDD12\",\"*hDD22\",\n",
     "         \"*aDD00\",\"*aDD01\",\"*aDD02\",\"*aDD11\",\"*aDD12\",\"*aDD22\",\n",
     "         \"*trK\",  \"*vetU0\",\"*vetU1\",\"*vetU2\",  \"*betU0\",\"*betU1\",\"*betU2\",\n",
-    "         \"*alpha\",\"*cf\"],\n",
-    "        os.path.join(Ccodesdir,\"ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"),params=outCparams)\n",
-    "with open(os.path.join(Ccodesdir,\"ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"), \"a\") as file:\n",
-    "    file.write(\"}\\n\")"
+    "         \"*alpha\",\"*cf\"],\"returnstring\",params=outCparams), \n",
+    "    opts = \"DisableCparameters\")"
    ]
   },
   {
@@ -394,24 +390,27 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function ID_BSSN__ALL_BUT_LAMBDAs() to file numerical_ADM_to_BSSN_Ccodes/ID_BSSN__ALL_BUT_LAMBDAs.h\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 6.a: Output the driver function for the above C function\n",
     "\n",
-    "# Next write the driver function for ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs():\n",
-    "with open(os.path.join(Ccodesdir,\"ID_BSSN__ALL_BUT_LAMBDAs.h\"), \"w\") as file:\n",
-    "    file.write(\"void ID_BSSN__ALL_BUT_LAMBDAs(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\")\n",
-    "    if pointer_to_ID_inputs == True:\n",
-    "        file.write(\"ID_inputs *other_inputs,\")\n",
-    "    else:\n",
-    "        file.write(\"ID_inputs other_inputs,\")\n",
-    "    file.write(\"REAL *in_gfs) {\\n\")\n",
-    "    file.write(lp.loop([\"i2\", \"i1\", \"i0\"], [\"0\", \"0\", \"0\"],\n",
-    "                       [\"Nxx_plus_2NGHOSTS[2]\", \"Nxx_plus_2NGHOSTS[1]\", \"Nxx_plus_2NGHOSTS[0]\"],\n",
-    "                       [\"1\", \"1\", \"1\"], [\"#pragma omp parallel for\",\n",
-    "                                         \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                         \"        const REAL xx1 = xx[1][i1];\"], \"\",\n",
-    "                       \"\"\"const REAL xx0 = xx[0][i0];\n",
+    "# Next write ID_BSSN__ALL_BUT_LAMBDAs(), the driver\n",
+    "#   function for ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs():\n",
+    "desc=\"\"\"Driver function for ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs(), \n",
+    "which writes BSSN variables in terms of ADM variables at a given point xx0,xx1,xx2\"\"\"\n",
+    "name=\"ID_BSSN__ALL_BUT_LAMBDAs\"\n",
+    "params = \"const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\"+ID_inputs_param+\"REAL *in_gfs\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name, params=params,\n",
+    "    body     =\"\"\"\n",
     "const int idx = IDX3(i0,i1,i2);\n",
     "const REAL xx0xx1xx2[3] = {xx0,xx1,xx2};\n",
     "ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs(xx0xx1xx2,other_inputs,\n",
@@ -423,8 +422,8 @@
     "                    &in_gfs[IDX4pt(VETU0GF,idx)],&in_gfs[IDX4pt(VETU1GF,idx)],&in_gfs[IDX4pt(VETU2GF,idx)],\n",
     "                    &in_gfs[IDX4pt(BETU0GF,idx)],&in_gfs[IDX4pt(BETU1GF,idx)],&in_gfs[IDX4pt(BETU2GF,idx)],\n",
     "                    &in_gfs[IDX4pt(ALPHAGF,idx)],&in_gfs[IDX4pt(CFGF,idx)]);\n",
-    "\"\"\"))\n",
-    "    file.write(\"}\\n\")"
+    "\"\"\",\n",
+    "    loopopts = \"AllPoints,Read_xxs,oldloops\",opts = \"DisableCparameters\")"
    ]
   },
   {
@@ -453,7 +452,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function ID_BSSN_lambdas() to file numerical_ADM_to_BSSN_Ccodes/ID_BSSN_lambdas.h\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 7: Compute $\\bar{\\Lambda}^i$ from finite-difference derivatives of rescaled metric quantities\n",
     "\n",
@@ -484,21 +491,18 @@
     "lambdaU_expressions = [lhrh(lhs=gri.gfaccess(\"in_gfs\",\"lambdaU0\"),rhs=lambdaU[0]),\n",
     "                       lhrh(lhs=gri.gfaccess(\"in_gfs\",\"lambdaU1\"),rhs=lambdaU[1]),\n",
     "                       lhrh(lhs=gri.gfaccess(\"in_gfs\",\"lambdaU2\"),rhs=lambdaU[2])]\n",
-    "lambdaU_expressions_FDout = fin.FD_outputC(\"returnstring\",lambdaU_expressions, outCparams)\n",
-    "\n",
-    "with open(os.path.join(Ccodesdir,\"ID_BSSN_lambdas.h\"), \"w\") as file:\n",
-    "    file.write(\"\"\"\n",
-    "void ID_BSSN_lambdas(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],const REAL dxx[3],REAL *in_gfs) {\\n\"\"\")\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
-    "                       [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
-    "                                      \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
-    "                                      \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
-    "                                      \"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+lambdaU_expressions_FDout))\n",
-    "    file.write(\"}\\n\")"
+    "desc=\"Output lambdaU[i] for BSSN, built using finite-difference derivatives.\"\n",
+    "name=\"ID_BSSN_lambdas\"\n",
+    "params = \"const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],const REAL dxx[3],REAL *in_gfs\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name, params=params,\n",
+    "    preloop  = \"\"\"\n",
+    "const REAL invdx0 = 1.0/dxx[0];\n",
+    "const REAL invdx1 = 1.0/dxx[1];\n",
+    "const REAL invdx2 = 1.0/dxx[2];\n",
+    "\"\"\",\n",
+    "    body     = fin.FD_outputC(\"returnstring\",lambdaU_expressions, outCparams),\n",
+    "    loopopts = \"InteriorPoints,Read_xxs,oldloops\",opts = \"DisableCparameters\")"
    ]
   },
   {
@@ -526,8 +530,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appended to file \"numerical_ADM_to_BSSN_Ccodes/PyMod/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"\n",
-      "Appended to file \"numerical_ADM_to_BSSN_Ccodes/PyMod/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"\n",
+      "Output C function ID_BSSN_lambdas() to file numerical_ADM_to_BSSN_Ccodes/PyMod/ID_BSSN_lambdas.h\n",
+      "Output C function ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs() to file numerical_ADM_to_BSSN_Ccodes/PyMod/ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\n",
+      "Output C function ID_BSSN__ALL_BUT_LAMBDAs() to file numerical_ADM_to_BSSN_Ccodes/PyMod/ID_BSSN__ALL_BUT_LAMBDAs.h\n",
       "\n",
       "\n",
       " ### BEGIN VALIDATION TESTS\n",
@@ -585,7 +590,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb to latex\n",
-      "[NbConvertApp] Writing 72187 bytes to Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+      "[NbConvertApp] Writing 72417 bytes to Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -609,21 +614,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
