--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -111,10 +111,10 @@
     "$$\\label{toc}$$\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize core NRPy+ modules\n",
-    "1. [Step 2](#step2): Scalar Wave RHSs in One Spatial Dimension, Fourth-Order Finite Differencing\n",
-    "1. [Step 3](#step3): Scalar Wave RHSs in Three Spatial Dimensions, Tenth-Order Finite Differencing\n",
+    "1. [Step 2](#rhss1d): Scalar Wave RHSs in One Spatial Dimension, Fourth-Order Finite Differencing\n",
+    "1. [Step 3](#rhss3d): Scalar Wave RHSs in Three Spatial Dimensions, Tenth-Order Finite Differencing\n",
     "    1. [Step 3.a](#code_validation1): Code Validation against `ScalarWave.ScalarWave_RHSs` NRPy+ module\n",
-    "1. [Step 4](#step4): Plane-Wave Initial Data for the Scalar Wave Equation\n",
+    "1. [Step 4](#planewavesoln): Plane-Wave Solution of the Scalar Wave Equation\n",
     "    1. [Step 4.a](#code_validation2): Code Validation against `ScalarWave.InitialData_PlaneWave` NRPy+ module\n",
     "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
@@ -149,10 +149,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step2'></a>\n",
+    "<a id='rhss1d'></a>\n",
     "\n",
     "# Step 2: Scalar Wave RHSs in One Spatial Dimension, Fourth-Order Finite Differencing \\[Back to [top](#toc)\\]\n",
-    "$$\\label{step2}$$\n",
+    "$$\\label{rhss1d}$$\n",
     "\n",
     "To minimize complication, we will first restrict ourselves to solving the wave equation in one spatial dimension, so\n",
     "$$\\nabla^2 u = \\partial_x^2 u.$$\n",
@@ -270,10 +270,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step3'></a>\n",
+    "<a id='rhss3d'></a>\n",
     "\n",
     "# Step 3: Scalar Wave RHSs in Three Spatial Dimensions, Tenth-Order Finite Differencing \\[Back to [top](#toc)\\]\n",
-    "$$\\label{step3}$$\n",
+    "$$\\label{rhss3d}$$\n",
     "\n",
     "Let's next repeat the same process, only this time at **10th** finite difference order, for the **3-spatial-dimension** scalar wave equation, with SIMD enabled:"
    ]
@@ -482,10 +482,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step4'></a>\n",
+    "<a id='planewavesoln'></a>\n",
     "\n",
-    "# Step 4: Plane-Wave Initial Data for the Scalar Wave Equation \\[Back to [top](#toc)\\]\n",
-    "$$\\label{step4}$$\n",
+    "# Step 4: Plane-Wave Solution of the Scalar Wave Equation \\[Back to [top](#toc)\\]\n",
+    "$$\\label{planewavesoln}$$\n",
     "\n",
     "The solution to the scalar wave equation for a monochromatic (single-wavelength) wave traveling in the $\\hat{k}$ direction is\n",
     "$$u(\\vec{x},t) = f(\\hat{k}\\cdot\\vec{x} - c t),$$\n",
@@ -657,21 +657,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
