--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -150,11 +150,38 @@
     "# Choices are: Spherical, SinhSpherical, SinhSphericalv2, Cylindrical, SinhCylindrical, \n",
     "#              SymTP, SinhSymTP\n",
     "CoordSystem     = \"SinhSpherical\"\n",
+    "\n",
+    "# Step 2.a: Set defaults for Coordinate system parameters.\n",
+    "#           These are perhaps the most commonly adjusted parameters,\n",
+    "#           so we enable modifications at this high level.\n",
+    "\n",
+    "# domain_size sets the default value for:\n",
+    "#   * Spherical's params.RMAX\n",
+    "#   * SinhSpherical*'s params.AMAX\n",
+    "#   * Cartesians*'s -params.{x,y,z}min & .{x,y,z}max\n",
+    "#   * Cylindrical's -params.ZMIN & .{Z,RHO}MAX\n",
+    "#   * SinhCylindrical's params.AMPL{RHO,Z}\n",
+    "#   * *SymTP's params.AMAX\n",
     "domain_size     = 10.0 # Needed for all coordinate systems.\n",
+    "\n",
+    "# sinh_width sets the default value for:\n",
+    "#   * SinhSpherical's params.SINHW\n",
+    "#   * SinhCylindrical's params.SINHW{RHO,Z}\n",
+    "#   * SinhSymTP's params.SINHWAA\n",
     "sinh_width      = 0.4 # If Sinh* coordinates chosen\n",
+    "\n",
+    "# sinhv2_const_dr sets the default value for:\n",
+    "#   * SinhSphericalv2's params.const_dr\n",
+    "#   * SinhCylindricalv2's params.const_d{rho,z}\n",
     "sinhv2_const_dr = 0.05# If Sinh*v2 coordinates chosen\n",
+    "\n",
+    "# SymTP_bScale sets the default value for:\n",
+    "#   * SinhSymTP's params.bScale\n",
     "SymTP_bScale    = 1.0 # If SymTP chosen\n",
-    "# Choices are: Euler, \"RK2 Heun\", \"RK2 MP\", \"RK2 Ralston\", RK3, \"RK3 Heun\", \"RK3 Ralston\",\n",
+    "\n",
+    "# Step 2.b: Set the order of spatial and temporal derivatives;\n",
+    "#           the core data type, and the CFL factor.\n",
+    "# RK_method choices include: Euler, \"RK2 Heun\", \"RK2 MP\", \"RK2 Ralston\", RK3, \"RK3 Heun\", \"RK3 Ralston\",\n",
     "#              SSPRK3, RK4, DP5, DP5alt, CK5, DP6, L6, DP8\n",
     "RK_method = \"RK4\"\n",
     "FD_order  = 4        # Finite difference order: even numbers only, starting with 2. 12 is generally unstable\n",
@@ -313,46 +340,13 @@
     "params.wavespeed = 1.0;\n",
     "params.kk0 = 1.0;\n",
     "params.kk1 = 1.0;\n",
-    "params.kk2 = 1.0;\n",
-    "\n",
-    "const REAL domain_size    = \"\"\"+str(domain_size)+\"\"\";\n",
-    "const REAL sinh_width     = \"\"\"+str(sinh_width)+\"\"\";\n",
-    "const REAL sinhv2_const_dr= \"\"\"+str(sinhv2_const_dr)+\"\"\";\n",
-    "const REAL SymTP_bScale   = \"\"\"+str(SymTP_bScale)+\";\\n\")\n",
-    "\n",
-    "    coordparams = \"\"\n",
-    "    if CoordSystem == \"Spherical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.RMAX = domain_size;\\n\"\"\"\n",
-    "    elif \"SinhSpherical\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPL = domain_size;\n",
-    "        params.SINHW=  sinh_width;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSphericalv2\":\n",
-    "            coordparams += \"        params.const_dr = sinhv2_const_dr;\\n\"\n",
-    "    elif \"SymTP\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.bScale =  SymTP_bScale;\n",
-    "        params.AMAX   =  domain_size;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSymTP\":\n",
-    "            coordparams += \"        params.SINHWAA = sinh_width;\\n\"\n",
-    "    elif CoordSystem == \"Cartesian\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.xmin = -domain_size, params.xmax = domain_size;\n",
-    "        params.ymin = -domain_size, params.ymax = domain_size;\n",
-    "        params.zmin = -domain_size, params.zmax = domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"Cylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.ZMIN   = -domain_size;\n",
-    "        params.ZMAX   =  domain_size;\n",
-    "        params.RHOMAX =  domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"SinhCylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPLRHO = domain_size;\n",
-    "        params.SINHWRHO= sinh_width;\n",
-    "        params.AMPLZ   = domain_size;\n",
-    "        params.SINHWZ  = sinh_width;\\n\"\"\"\n",
-    "    file.write(coordparams+\"\\n\")\n",
+    "params.kk2 = 1.0;\"\"\")\n",
+    "    \n",
+    "# Append to $Ccodesdir/free_parameters.h reference metric parameters based on generic\n",
+    "#    domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale,\n",
+    "#    parameters set above. \n",
+    "rfm.out_default_free_parameters_for_rfm(os.path.join(Ccodesdir,\"free_parameters.h\"),\n",
+    "                                        domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale)\n",
     "\n",
     "# Step 1.c.ii: Generate set_Nxx_dxx_invdx_params__and__xx.h:\n",
     "rfm.set_Nxx_dxx_invdx_params__and__xx_h(os.path.join(Ccodesdir))\n",
@@ -686,14 +680,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground-SIMD.c -o ScalarWaveCurvilinear_Playground_Ccodes/output/ScalarWaveCurvilinear_Playground-SIMD -lm`...\n",
-      "Finished executing in 1.4118916988372803 seconds.\n",
+      "Finished executing in 1.4146976470947266 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 16  8 16`...\n",
-      "Finished executing in 0.21169519424438477 seconds.\n",
+      "Finished executing in 0.2085282802581787 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 24 12 24`...\n",
-      "Finished executing in 0.6102018356323242 seconds.\n",
+      "Finished executing in 0.6077070236206055 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 48 24 48`...\n",
-      "Finished executing in 19.443089962005615 seconds.\n"
+      "Finished executing in 18.23954939842224 seconds.\n"
      ]
     }
    ],
@@ -856,7 +850,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb to latex\n",
-      "[NbConvertApp] Writing 107039 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
+      "[NbConvertApp] Writing 105099 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
