--- a/in_progress/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/in_progress/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -30,6 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\",\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
     "out_string = \"\"\"\n",
     "// These are common packages that we are likely to need.\n",
     "#include \"stdio.h\"\n",
@@ -309,6 +314,7 @@
     "    // Now, it's time to make the random numbers.\n",
     "    const long int seed = time(NULL); // seed = 1570632212; is an example of a seed that produces\n",
     "                                      // bad agreement for high speeds \n",
+    "    //const long int seed = 1574393335;\n",
     "    srand(seed); // Set the seed\n",
     "    printf(\"seed for random number generator = %ld; RECORD IF AGREEMENT IS BAD\\\\n\\\\n\",seed);\n",
     "    // We take care to make sure the corresponding quantities have the SAME value.\n",
@@ -519,30 +525,30 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "Finished executing in 0.422922134399 seconds.\n",
+      "Finished executing in 0.40923428535461426 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.436672925949 seconds.\n",
+      "Finished in 0.41703081130981445 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "seed for random number generator = 1572376578; RECORD IF AGREEMENT IS BAD\n",
+      "seed for random number generator = 1574393512; RECORD IF AGREEMENT IS BAD\n",
       "\n",
-      "Valencia 3-velocity (right): 6.9530e-01, 3.6005e-01, -2.9632e-01\n",
-      "Valencia 3-velocity (left):  4.9470e-01, -7.8052e-02, 3.0821e-01\n",
+      "Valencia 3-velocity (right): -3.3794e-01, 6.1318e-01, -3.4339e-01\n",
+      "Valencia 3-velocity (left):  -6.5600e-01, 6.8126e-01, 7.0516e-01\n",
       "\n",
       "Below are the numbers we care about. These are the Significant Digits of Agreement \n",
       "between the HLLE fluxes computed by NRPy+ and ETK. Each row represents a flux \n",
       "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
       "of outputs should show at least 10 significant digits of agreement. \n",
       "\n",
-      "SDA: 16.0, 16.3, 16.2\n",
-      "SDA: 16.3, 17.3, 16.5\n",
-      "SDA: 13.5, 13.4, 13.3\n",
+      "SDA: 14.5, 14.5, 14.6\n",
+      "SDA: 14.3, 14.4, 14.4\n",
+      "SDA: 14.5, 14.6, 14.5\n",
       "Note that in the case of very high velocities, numerical error will accumulate \n",
       "and reduce agreement significantly due to a catastrophic cancellation. \n",
       "\n",
-      "Finished in 0.0359020233154 seconds.\n",
+      "Finished in 0.11152887344360352 seconds.\n",
       "\n",
       "\n"
      ]
@@ -568,21 +574,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
